syntax = "proto3";

package medina;

message Persona
{
	string nombre = 1;
	string apellido = 2;
	string email = 3;
}

message PersonaRequest
{
	Persona persona = 1;
}

message PersonaResponse 
{
	string resultado = 1;
}

service PersonaService 
{
	rpc RegistrarPersona(PersonaRequest) returns (PersonaResponse){}
}